# serializer version: 1
# name: TestSolarusGenerator.test_generate
  tuple(
    list([
      'solarus-run',
      '-fullscreen=yes',
      '-cursor-visible=no',
      '-lua-console=no',
      '-quit-combo=8+9',
      '-joypad-num1=0',
      '/userdata/roms/solarus/rom.solarus',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
      'SDL_JOYSTICK_HIDAPI': '0',
      'SDL_VIDEO_MINIMIZE_ON_FOCUS_LOSS': '0',
    }),
  )
# ---
# name: TestSolarusGenerator.test_generate[pads]
  '''
  action=button 0
  attack=button 1
  item1=button 3
  item2=button 2
  pause=button 9
  right=hat 0 right
  up=hat 0 up
  left=hat 0 left
  down=hat 0 down
  
  '''
# ---
# name: TestSolarusGenerator.test_generate_joystick[{'joystick': 'joystick1'}][pads]
  '''
  action=button 0
  attack=button 1
  item1=button 3
  item2=button 2
  pause=button 9
  up=axis 1 -
  down=axis 1 +
  left=axis 0 -
  right=axis 0 +
  
  '''
# ---
# name: TestSolarusGenerator.test_generate_joystick[{'joystick': 'joystick2'}][pads]
  '''
  action=button 0
  attack=button 1
  item1=button 3
  item2=button 2
  pause=button 9
  up=axis 3 -
  down=axis 3 +
  left=axis 2 -
  right=axis 2 +
  
  '''
# ---
# name: TestSolarusGenerator.test_generate_joystick[{'joystick': 'normal'}][pads]
  '''
  action=button 0
  attack=button 1
  item1=button 3
  item2=button 2
  pause=button 9
  right=hat 0 right
  up=hat 0 up
  left=hat 0 left
  down=hat 0 down
  
  '''
# ---
# name: TestSolarusGenerator.test_generate_keyboard[pads]
  '''
  action=None
  attack=None
  item1=None
  item2=None
  pause=None
  right=None
  up=None
  left=None
  down=None
  
  '''
# ---
# name: TestSolarusGenerator.test_generate_no_controllers[pads]
  ''
# ---
# name: TestSolarusGenerator.test_get_hotkeys_context
  dict({
    'keys': dict({
      'exit': list([
        'KEY_LEFTALT',
        'KEY_F4',
      ]),
    }),
    'name': 'solarus',
  })
# ---
